--- a/about.html
+++ b/about.html
@@ -36,9 +36,8 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8 col-xxl-6">
                             <div class="text-center my-5">
-                                <h1 class="fw-bolder mb-3"> Nuestra mision es... </h1>
-                                <p class="lead fw-normal text-muted mb-4"> Objetivo </p>
-                                <a class="btn btn-primary btn-lg" href="#scroll-target"> Lee nuestra historia </a>
+                                <h1 class="fw-bolder mb-3 custom-text-center"> Misión,Visión y Valores </h1>
+                                <img class="img-fluid mt-2 px-4" src="img/UDDEA3_recortada-redimensionada.png" alt="..." />
                             </div>
                         </div>
                     </div>
@@ -47,11 +46,11 @@
             <!-- About section one-->
             <section class="py-5 bg-light" id="scroll-target">
                 <div class="container px-5 my-5">
-                    <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="img/Prueba players field.jpeg" alt="..." /></div>
+                    <div class="row gx-5 align-items-center align-middle">
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="img/Mision.jpeg" alt="..." /></div>
                         <div class="col-lg-6">
-                            <h2 class="fw-bolder"> Nuestra fundacion </h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                            <h2 class="fw-bolder text-center colorLetraCorp2"> MISIÓN </h2>
+                            <p class="lead fw-normal mb-0 colorLetraCorp3"> Reunir, representar y defender a los directores deportivos y especialistas del ámbito deportivo, promoviendo su profesionalización, reconocimiento legal, y mejora de condiciones laborales, para fortalecer su papel en la gestión integral del deporte y proteger sus derechos.</p>
                         </div>
                     </div>
                 </div>
@@ -60,10 +59,32 @@
             <section class="py-5">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0 rounded-full" src="img/Vision.png" alt="..." /></div>
                         <div class="col-lg-6">
-                            <h2 class="fw-bolder"> Crecimiento &amp; futuro </h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                            <h2 class="fw-bolder text-center colorLetraCorp2"> VISIÓN </h2>
+                            <p class="lead fw-normal mb-0 colorLetraCorp3"> Ser una entidad líder en la transformación y evolución de la gestión deportiva, impulsando el reconocimiento, profesionalización y colaboración de directores deportivos, secretarios técnicos y especialistas, contribuyendo al desarrollo de un ecosistema deportivo más inclusivo, sostenible y de alto rendimiento. </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="py-5 bg-light" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="img/Valores.jpeg" alt="..." /></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder text-center colorLetraCorp2"> VALORES </h2>
+                            <p class="lead fw-normal mb-0">
+                                <ul class="ulRows">
+                                    <li class="colorLetraCorp3"> Innovación: Buscar continuamente nuevas formas de mejorar la profesión de director deportivo y su equipo de trabajo. </li>
+                                    <li class="colorLetraCorp3"> Igualdad: Defender la igualdad de oportunidades y la justa remuneración para todos los miembros, sin distinción de género. </li>
+                                    <li class="colorLetraCorp3"> Profesionalismo: Actuar con compromiso, responsabilidad y excelencia en cada tarea.  </li>
+                                    <li class="colorLetraCorp3"> Transparencia: Garantizar claridad y apertura en todas las decisiones y procesos.  </li>
+                                    <li class="colorLetraCorp3"> Unidad: Fomentar la cooperación y colaboración entre todos los miembros.  </li>
+                                    <li class="colorLetraCorp3"> Honestidad: Actuar con integridad y veracidad en todas las interacciones.  </li>
+                                    <li class="colorLetraCorp3"> Respeto: Valorar y considerar las ideas y aportaciones de todos los profesionales. </li>
+                                    <li class="colorLetraCorp3"> Defensa y protección del afiliado: Salvaguardar los derechos y condiciones de los miembros de la asociación. </li>
+                                </ul>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -72,35 +93,35 @@
             <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
                     <div class="text-center">
-                        <h2 class="fw-bolder"> Nuestro equipo </h2>
+                        <h2 class="fw-bolder text-center colorLetraCorp2"> Nuestro equipo </h2>
                         <p class="lead fw-normal text-muted mb-5"> Dedicados a la calidad y el desarrollo </p>
                     </div>
                     <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Ibbie Eckart</h5>
+                                <img class="img-fluid rounded-circle mb-4 bordeCorporativo" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
+                                <h5 class="fw-bolder colorLetraCorp2">Ibbie Eckart</h5>
                                 <div class="fst-italic text-muted">Founder &amp; CEO</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Arden Vasek</h5>
+                                <img class="img-fluid rounded-circle mb-4 bordeCorporativo" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
+                                <h5 class="fw-bolder colorLetraCorp2">Arden Vasek</h5>
                                 <div class="fst-italic text-muted">CFO</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-sm-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Toribio Nerthus</h5>
+                                <img class="img-fluid rounded-circle mb-4 bordeCorporativo" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
+                                <h5 class="fw-bolder colorLetraCorp2">Toribio Nerthus</h5>
                                 <div class="fst-italic text-muted">Operations Manager</div>
                             </div>
                         </div>
                         <div class="col mb-5">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Malvina Cilla</h5>
+                                <img class="img-fluid rounded-circle mb-4 bordeCorporativo" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
+                                <h5 class="fw-bolder colorLetraCorp2">Malvina Cilla</h5>
                                 <div class="fst-italic text-muted">CTO</div>
                             </div>
                         </div>
