--- a/colaboradores.html
+++ b/colaboradores.html
@@ -33,26 +33,32 @@
             <section class="bg-light py-5">
                 <div class="container px-5 my-5">
                     <div class="text-center mb-5">
-                        <h1 class="fw-bolder"> Empresas Colaboradoras </h1>
+                        <h1 class="fw-bolder colorLetraCorp2"> Empresas Colaboradoras </h1>
                     </div>
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                             <img src="https://dummyimage.com/1300x700/343a40/6c757d" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5> Empresa Colaboradora </h5>
+                                <h5 class="colorLetraCorp2"> Empresa Colaboradora 1 </h5>
                               </div>
                           </div>
                           <div class="carousel-item">
                             <img src="https://dummyimage.com/1300x700/343a40/6c757d" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5> Empresa Colaboradora </h5>
+                                <h5 class="colorLetraCorp2"> Empresa Colaboradora 2 </h5>
                             </div>
                           </div>
                           <div class="carousel-item">
                             <img src="https://dummyimage.com/1300x700/343a40/6c757d" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5> Empresa Colaboradora </h5>
+                                    <h5 class="colorLetraCorp2"> Empresa Colaboradora 3 </h5>
+                                </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://dummyimage.com/1300x700/343a40/6c757d" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5 class="colorLetraCorp2"> Empresa Colaboradora 4 </h5>
                                 </div>
                         </div>
                     </div>
