--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                             <div class="col-12 col-md-10">
                                 <div class="row gx-5 row-cols-1 row-cols-md-2">
                                     <div class="col-12 col-md-6 text-center mt-5">
-                                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-chat-dots"></i></div>
+                                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-whatsapp"></i></div>
                                         <div class="h5 mb-2">Habla con nosotros</div>
                                         <p class="text-muted mb-0">Contacta con nosotros vía mail o número de teléfono</p>
                                     </div>
