--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 <div class="row gx-5 align-items-center justify-content-center">
                     <div class="col-lg-8 col-xl-7 col-xxl-6">
                         <div class="my-5 text-center text-xl-start">
-                            <h1 class="display-5 fw-bolder mb-2">Mi Negocio</h1>
-                            <p class="lead fw-normal mb-4">Asociación de personas</p>
+                            <h1 class="display-5 fw-bolder mb-2"> UDDEA </h1>
+                            <p class="lead fw-normal mb-4"> Unión de Directores Deportivos y Especialistas Asociados </p>
                         </div>
                     </div>
-                    <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"> <img class="img-fluid rounded-3 my-5"
-                            src="https://dummyimage.com/600x400/343a40/6c757d" alt="..."> </div>
+                    <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"> <img class="img-fluid my-5"
+                            src="img/UDDEA3.png" alt="..."> </div>
                 </div>
             </div>
         </header>
@@ -142,13 +142,15 @@
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-10 col-xl-7">
                         <div class="text-center">
-                            <div class="fs-4 mb-4 fst-italic">"Frase de Redes Sociales"</div>
+                            <div class="fs-4 mb-2 fst-italic">"Frase de Redes Sociales"</div>
                             <div class="d-flex align-items-center justify-content-center">
-                                <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
+                                <img class="rounded-circle me-3 border-primary" src="https://dummyimage.com/100x100/ced4da/6c757d"
                                     alt="..." />
+                            </div>
+                            <div class="d-flex align-items-center justify-content-center mt-2">
                                 <div class="fw-bold">
                                     Sin Nombre
-                                    <span class="fw-bold text-primary mx-1">/</span>
+                                    <span class="fw-bold mx-1 colorLetraCorp">/</span>
                                     CEO, Pomodoro
                                 </div>
                             </div>
@@ -161,38 +163,31 @@
         <section class="py-5 section-custom" id="features">
             <div class="container px-5 my-5">
                 <div class="row gx-5">
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h2 class="fw-bolder mb-0"> Nuestros proyectos </h2>
+                    <div class="col-lg-4 mb-5 mb-lg-0 text-end">
+                        <h2 class="colorLetraCorp2"> Nuestros objetivos </h2>
+                        <h4> Acceso a una comunidad exclusiva de profesionales que toman decisiones estratégicas en los clubes deportivos</h4>
                     </div>
                     <div class="col-lg-8">
                         <div class="row gx-5 row-cols-1 row-cols-md-2">
                             <div class="col mb-5 h-100">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                        class="bi bi-collection"></i></div>
-                                <h2 class="h5"> Titulo de proyecto </h2>
-                                <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is
-                                    just a bit more text.</p>
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-globe-americas"></i></div>
+                                <h2 class="h5 colorLetraCorp2"> Red de contactos </h2>
+                                <p class="mb-0 colorLetraCorp3"> Acceso directo a eventos, congresos y oportunidades de networking. </p>
                             </div>
                             <div class="col mb-5 h-100">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                        class="bi bi-building"></i></div>
-                                <h2 class="h5"> Titulo de proyecto </h2>
-                                <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is
-                                    just a bit more text.</p>
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-eye-fill"></i></div>
+                                <h2 class="h5 colorLetraCorp2"> Visibilidad </h2>
+                                <p class="mb-0 colorLetraCorp3"> Visibilidad y representación ante instituciones deportivas y federativas. </p>
                             </div>
                             <div class="col mb-5 mb-md-0 h-100">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                        class="bi bi-toggles2"></i></div>
-                                <h2 class="h5"> Titulo de proyecto </h2>
-                                <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is
-                                    just a bit more text.</p>
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-mortarboard-fill"></i></div>
+                                <h2 class="h5 colorLetraCorp2"> Formación </h2>
+                                <p class="mb-0 colorLetraCorp3">Oportunidades de formación continua a través de programas especializados. </p>
                             </div>
                             <div class="col h-100">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                        class="bi bi-toggles2"></i></div>
-                                <h2 class="h5"> Titulo de proyecto </h2>
-                                <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is
-                                    just a bit more text.</p>
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-suitcase-lg-fill"></i></div>
+                                <h2 class="h5 colorLetraCorp2"> Asesoría integral </h2>
+                                <p class="mb-0 colorLetraCorp3"> Asesoría y apoyo en temas legales, laborales y de desarrollo profesional </p>
                             </div>
                         </div>
                     </div>
