Logo para version movil y link de afiliado

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                         <div class="row gx-5 justify-content-center">
                                 <form id="contactForm">
                                     <div class="form-floating mb-3"> 
-                                        <p class="custom-text custom-text-center"> Link de afiliado: </p> 
+                                        <p class="custom-text custom-text-center"> Link de afiliado: <a href="https://forms.gle/fjxRU1u9GgrX6WiQ7"> únete </a></p> 
                                     </div>
                                     <div class="form-floating mb-3"> 
                                         <p class="custom-text custom-text-center"> Correo electrónico: </p> 
