--- a/index.html
+++ b/index.html
@@ -39,15 +39,16 @@
                 <div class="row gx-5 align-items-center justify-content-center">
                     <div class="col-lg-8 col-xl-7 col-xxl-6">
                         <div class="my-5 text-center text-xl-start">
-                            <h1 class="display-5 fw-bolder mb-2"> UDDEA </h1>
-                            <p class="lead fw-normal mb-4"> Unión de Directores Deportivos y Especialistas Asociados </p>
+                            <h1 class="display-5 fw-bolder mb-2">UDDEA</h1>
+                            <p class="lead fw-normal mb-4">Unión de Directores Deportivos y Especialistas Asociados</p>
                         </div>
                     </div>
-                    <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"> <img class="img-fluid my-5"
-                            src="img/UDDEA3.png" alt="..."> </div>
+                    <div class="col-xl-5 col-xxl-6 text-center">
+                        <img class="img-fluid my-5 logo-responsive" src="img/UDDEA3.png" alt="...">
+                    </div>
                 </div>
             </div>
-        </header>
+        </header>               
         <!-- Features section-->
         <section class="py-5">
             <div class="container px-5 my-5">
